# C-_test_cross-platform

LOG/: CMakeLists.txt  README.MD  main.cpp
LOG/myshell/: myshell.cpp  myshell.h
yaml/: 2通道matrix.yaml  config.yaml  readyaml.cpp
接口/: CMakeLists.txt  client.cpp  main.cpp  server.cpp
